<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg01"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PasswordActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:text="@string/entpasstxt"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/true_red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:alpha="0.75"
            android:background="@color/disp_color"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/true_red"
            android:textColorHint="@color/true_red"
            android:textColorLink="@color/true_red"
            android:textSize="32sp" >

            <requestFocus />
        </EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dummy"
            android:paddingLeft="0dp"
            android:paddingTop="37dp" >

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="center" >

                <Button
                    android:id="@+id/Button03"
                    style="@drawable/button_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="108dp"
                    android:layout_marginTop="68dp"
                    android:alpha="0.75"
                    android:background="@drawable/button_black"
                    android:contentDescription="@string/num1"
                    android:minHeight="72dp"
                    android:minWidth="72dp"
                    android:text="@string/num1"
                    android:textColor="@color/true_red"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Button02"
                    style="@drawable/button_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="108dp"
                    android:layout_marginTop="68dp"
            		android:alpha="0.75"
                    android:background="@drawable/button_black"
                    android:contentDescription="@string/num1"
                    android:minHeight="72dp"
                    android:minWidth="72dp"
                    android:text="@string/num2"
                    android:textColor="@color/true_red"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Button01"
                    style="@drawable/button_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="108dp"
                    android:layout_marginTop="68dp"
            		android:alpha="0.75"
                    android:background="@drawable/button_black"
                    android:contentDescription="@string/num1"
                    android:minHeight="72dp"
                    android:minWidth="72dp"
                    android:text="@string/num3"
                    android:textColor="@color/true_red"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/linearLayout2"
                android:gravity="center" >

                <Button
                    android:id="@+id/Button04"
                    style="@drawable/button_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="108dp"
                    android:layout_marginTop="68dp"
            		android:alpha="0.75"
                    android:background="@drawable/button_black"
                    android:contentDescription="@string/num1"
                    android:minHeight="72dp"
                    android:minWidth="72dp"
                    android:text="@string/num4"
                    android:textColor="@color/true_red"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Button06"
                    style="@drawable/button_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="108dp"
                    android:layout_marginTop="68dp"
            		android:alpha="0.75"
                    android:background="@drawable/button_black"
                    android:contentDescription="@string/num1"
                    android:minHeight="72dp"
                    android:minWidth="72dp"
                    android:text="@string/num5"
                    android:textColor="@color/true_red"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Button05"
                    style="@drawable/button_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="108dp"
                    android:layout_marginTop="68dp"
            		android:alpha="0.75"
                    android:background="@drawable/button_black"
                    android:contentDescription="@string/num1"
                    android:minHeight="72dp"
                    android:minWidth="72dp"
                    android:text="@string/num6"
                    android:textColor="@color/true_red"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/linearLayout3"
                android:gravity="center" >

                <Button
                    android:id="@+id/Button09"
                    style="@drawable/button_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="108dp"
                    android:layout_marginTop="68dp"
            		android:alpha="0.75"
                    android:contentDescription="@string/num1"
                    android:background="@drawable/button_black"
                    android:minHeight="72dp"
                    android:minWidth="72dp"
                    android:text="@string/num7"
                    android:textColor="@color/true_red"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Button08"
                    style="@drawable/button_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="108dp"
                    android:layout_marginTop="68dp"
            		android:alpha="0.75"
                    android:contentDescription="@string/num1"
                    android:background="@drawable/button_black"
                    android:minHeight="72dp"
                    android:minWidth="72dp"
                    android:textColor="@color/true_red"
                    android:text="@string/num8"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Button07"
                    style="@drawable/button_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="108dp"
                    android:layout_marginTop="68dp"
            		android:alpha="0.75"
                    android:contentDescription="@string/num1"
                    android:background="@drawable/button_black"
                    android:minHeight="72dp"
                    android:minWidth="72dp"
                    android:text="@string/num9"
                    android:textColor="@color/true_red"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/linearLayout4"
                android:gravity="center" >

                <Button
                    android:id="@+id/Button12"
                    style="@drawable/button_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="108dp"
                    android:layout_marginTop="68dp"
            		android:alpha="0.75"
                    android:contentDescription="@string/num1"
                    android:background="@drawable/button_black"
                    android:minHeight="72dp"
                    android:minWidth="72dp"
                    android:text="@string/deltxt"
                    android:textColor="@color/true_red"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Button11"
                    style="@drawable/button_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="108dp"
                    android:layout_marginTop="68dp"
            		android:alpha="0.75"
                    android:contentDescription="@string/num1"
                    android:background="@drawable/button_black"
                    android:minHeight="72dp"
                    android:minWidth="72dp"
                    android:text="@string/num0"
                    android:textColor="@color/true_red"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Button10"
                    style="@drawable/button_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="108dp"
                    android:layout_marginTop="68dp"
            		android:alpha="0.75"
                    android:contentDescription="@string/num1"
                    android:background="@drawable/button_black"
                    android:minHeight="72dp"
                    android:minWidth="72dp"
                    android:text="@string/oktxt"
                    android:textColor="@color/true_red"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>