<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg01"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HimekoMain" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/qstn_et"
        android:layout_alignParentTop="true"
        android:text="@string/qstntxt"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/true_red"
        android:textColorHint="@color/true_red"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/qstn_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:alpha="0.75"
        android:background="@color/disp_color"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:minHeight="75dp"
        android:padding="5dp"
        android:textColor="@color/true_red"
        android:textStyle="bold" />

    <Button
        android:id="@+id/okbtnx"
        style="@drawable/button_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/qstn_et"
        android:layout_below="@+id/qstn_et"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="7dp"
        android:alpha="0.75"
        android:background="@drawable/button_black"
        android:focusableInTouchMode="false"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/asktxt"
        android:textColor="@color/true_red"
        android:textSize="14sp" />

    <Button
        android:id="@+id/resetbtn"
        style="@drawable/button_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/okbtnx"
        android:layout_alignBottom="@+id/okbtnx"
        android:layout_alignLeft="@+id/qstn_et"
        android:alpha="0.75"
        android:background="@drawable/button_black"
        android:focusableInTouchMode="false"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/resettxt"
        android:textColor="@color/true_red"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/log_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/resetbtn"
        android:layout_below="@+id/okbtnx"
        android:layout_marginTop="10dp"
        android:text="@string/logtxt"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/true_red"
        android:textColorHint="@color/true_red"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/logs_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/log_et"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/log_et"
        android:alpha="0.75"
        android:background="@color/disp_color"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:linksClickable="false"
        android:longClickable="false"
        android:minHeight="100dp"
        android:padding="5dp"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:selectAllOnFocus="false"
        android:textColor="@color/true_red"
        android:textSize="12sp"
        android:textStyle="normal" />

</RelativeLayout>
